# wordle

./: .gitignore  CMakeLists.txt  README.md  guesser_stats.txt  main.cpp
cmake/: uWebSockets.cmake
data/: all.txt  entropy_scores.txt  train_all_uniform_test_all.txt
results/: greedy_top1.txt  greedy_top10.txt  greedy_top3.txt  train_all_priors_test_twl.txt  train_all_uniform_test_twl.txt  train_twl_test_twl.txt
src/: benchmark.cpp  calc_brute_force.cpp  calc_greedy.cpp  common.h  console_app.cpp  decision_tree.h  game.h  players.h  plot_scores.py  tools.h  web_app.cpp
static/: index.html  main.css  main.js
